# ReportBuilder-SU

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
config/: report.yml
docs/: ARCHITECTURE.md  SETUP.md
scripts/: build_mayoristas_historico.py  check-static.ps1  check-static.sh  setup.ps1  setup.sh
src/su_report/: __init__.py  __main__.py  cli.py  data_sources.py  doctor.py  map_geometry.py  maps.py  models.py  olap.py  pipeline.py  report_builder.py  security.py  settings.py  validation.py
src/su_report/charts/: __init__.py  eds_top.py  mayoristas_historico.py
src/su_report/reporting/: __init__.py  builder.py  context.py  data.py  style.py  tables.py
src/su_report/reporting/pages/: __init__.py  page_01_cover.py  page_02_national_monthly.py  page_03_historical_comparison.py  page_04_wholesalers.py  page_05_wholesalers_history.py  page_06_geography_current.py  page_07_geography_diesel.py  page_08_municipalities.py  page_09_departments_table.py  page_10_municipalities_table.py  page_11_eds.py  page_12_top_eds.py  page_13_conclusions.py  page_13_zfd.py
src/su_report/tui/: __init__.py  app.py
templates/: report.typ
tests/: test_cover_resolution.py  test_data_sources.py  test_eds_top.py  test_maps.py  test_mayoristas_historico.py  test_models.py  test_olap.py  test_security.py  test_settings.py  test_tui.py  test_validation.py
tests/reporting/: conftest.py  test_builder.py  test_data_and_tables.py  test_pages.py  test_registry.py
tools/sicom-olap-cli/: INTEGRATION.md  README.md  WinSbi.Olap.csproj
(+40 files in other folders)
